ingress-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
spec:
  loadBalancerIP: 20.237.112.26
  type: LoadBalancer
  ports:
   - port: 80
  selector:
   app: webapp
