webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: webapp-deployment
 labels:
  app: webapp
spec:
 replicas: 1
 selector:
  matchLabels:
   app: webapp
 template:
  metadata:
    labels:
      app: webapp
  spec:
    containers:
    - name: frontend
      image: psdemoacrangelo.azurecr.io/fpfe:latest
      ports:
      - containerPort: 80
        protocol: TCP
        name: http

    - name: course-api
      image: psdemoacrangelo.azurecr.io/courseapi:latest
      ports:
      - containerPort: 8081

    - name: user-api
      image: psdemoacrangelo.azurecr.io/fpbe:latest
      ports:
      - containerPort: 8080
    - name: micro-services-pg2mongo
      image: psdemoacrangelo.azurecr.io/micro-services-pg2mong:latest
    imagePullSecrets:
    - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
 name: webapp-service
 #annotations:
 # service.beta.kubernetes.io/azure-load-balancer-ipv4: 20.33.12.51
 labels:
   app: webapp
   
spec:
 #type: LoadBalancer
 #loadBalancerIP: 20.121.73.181
 selector:
   app: webapp
 ports:
   - name: http
     protocol: TCP
     port: 80
     targetPort: 80
   - name: api-v1
     protocol: TCP
     port: 8080
     targetPort: 8080
   - name: api-v2
     protocol: TCP
     port: 8081
     targetPort: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  #ingressClassName: azure-application-gateway
  rules:
#   - host: ofcourse.website
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port:
              number: 80
      - path: /api/v1/*
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port: 
              number: 8080
      - path: /api/v2/*
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port: 
              number: 8081
